--- a/Prueba/app/src/main/res/layout/activity_main.xml
+++ b/Prueba/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Actividades.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="211dp"
+        android:layout_height="281dp"
         android:layout_marginTop="5dp"
         android:layout_weight="6"
         android:orientation="vertical"
@@ -29,16 +29,33 @@
             android:id="@+id/login"
             android:layout_width="399dp"
             android:layout_height="59dp"
-            android:textSize="36dp" />
+            android:textSize="36dp"
+            android:hint="Usuario"/>
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:textSize="36dp"
+            android:inputType="textPassword"
+            android:hint="Contraseña"/>
+
+
 
         <Button
             android:id="@+id/iniciar"
             android:layout_width="398dp"
             android:layout_height="wrap_content"
-            android:text="Iniciar"
+            android:text="Iniciar sesión"
 
             tools:layout_editor_absoluteX="159dp"
             tools:layout_editor_absoluteY="394dp" />
+
+        <Button
+            android:id="@+id/registrar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Registrarse" />
 
     </LinearLayout>
 
