--- a/Prueba/app/src/main/res/layout/activity_lista.xml
+++ b/Prueba/app/src/main/res/layout/activity_lista.xml
@@ -9,6 +9,7 @@
 
 
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="678dp">
 
